@@ -16,7 +16,7 @@ import io.b2mash.b2b.b2bstrawman.provisioning.TenantProvisioningService;
 import io.b2mash.b2b.b2bstrawman.settings.OrgSettings;
 import io.b2mash.b2b.b2bstrawman.settings.OrgSettingsRepository;
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.Callable;
 import org.junit.jupiter.api.AfterEach;
@@ -28,7 +28,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.authentication.TestingAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.support.TransactionTemplate;
@@ -237,9 +236,7 @@ class DataSubjectRequestServiceTest {
   }
 
   private <T> T runInTenant(Callable<T> callable) {
-    var auth =
-        new TestingAuthenticationToken(
-            "user_dsr_svc_test", null, List.of(new SimpleGrantedAuthority("ROLE_ORG_OWNER")));
+    var auth = new TestingAuthenticationToken("user_dsr_svc_test", null, Collections.emptyList());
     SecurityContextHolder.getContext().setAuthentication(auth);
 
     return ScopedValue.where(RequestScopes.TENANT_ID, tenantSchema)
